# FerroPassGen

./: Cargo.toml  README.md
.github/workflows/: publish_crates_io.yml
src-cli/: Cargo.toml  README.md
src-cli/src/: main.rs
src-lib/: Cargo.toml  README.md
src-lib/src/: lib.rs  passphrase_gen.rs  password_gen.rs
