[package]
name = "ferropassgen"
version = "1.0.0"
authors = ["James Clarke <james@jamesdavidclarke.com>"]
description = "A library for generating secure passwords and passphrases"
repository = "https://github.com/JamesClarke7283/FerroPassGen"
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["password", "passphrase", "generator", "security"]
categories = ["cryptography", "command-line-utilities"]
edition = "2021"
rust-version = "1.60.0"

[dependencies]
rand = "0.8"
thiserror = "1.0"

[lints]
workspace = true
